--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h4>Testando Github</h4>
     <h5>Testando Github</h5>
     <h6>Testando Github</h6>
+    <h6>1 de mai de 2017 - No Windows 10, clique no botão Iniciar. Abra o Painel de controle. Escolha Opções de pasta em Aparência e personalização. Clique no ícone Opções à direita da faixa de opções. Na caixa de diálogo Opções de pasta, selecione a guia Exibir. Selecione Mostrar arquivos, pastas e unidades ocultas.</h6>
 
   </body>
 </html>
